# kw4_x

./: .gitignore  SESSION_2026-04-08.md  download_deps_py3.py
kw4_x/: CLAUDE.md  CMakeLists.txt
kw4_x/Classes/: AppDelegate.cpp  AppDelegate.h  AppleTouchedHandleLayer.cpp  AppleTouchedHandleLayer.h  AppleTreeScene.cpp  AppleTreeScene.h  Character.cpp  Character.h  CharacterFactory.cpp  CharacterFactory.h  HelloWorldScene.cpp  HelloWorldScene.h  InfoScene.cpp  InfoScene.h  KoreanUTF8.h  MKDelegateCPP.h  MKDelegateCPP.mm  MKStoreManager.h  MKStoreManager.m  MKStoreManager.mm  MKStoreManagerDelegate.cpp  MKStoreManagerDelegate.h  MKStoreManager_cpp.cpp  MKStoreManager_cpp.h  MKStoreManager_mm.h  MKStoreManager_mm.mm  MKStoreObserver.h  MKStoreObserver.m  MKStoreObserver.mm  MainMenuScene.cpp  MainMenuScene.h  PointManager.cpp  PointManager.h  Singleton.h  SoundFactory.cpp  SoundFactory.h  StudyScene.cpp  StudyScene.h  TextLayer.cpp  TextLayer.h  (+12 more)
kw4_x/Resources/: Info.plist  Info_lite.plist  Untitled-1.psd  word_card_data.xml  word_card_data_x.xml  word_factory.txt
kw4_x/Resources/Sound/: appleTree.aiff  ending.m4a  excellent.m4a  giggle.m4a  goodjob.m4a
kw4_x/proj.win32/: game.rc  main.cpp  main.h  resource.h
